[package]
name = "roguest"
version = "0.1.0"
authors = ["fwmakc <fwmakc@mail.ru>"]
edition = "2024"
description = "The roguelike rust game"
license = "MIT"

[lints.rust]
unused = "allow"

[dependencies]
colored = "3.0.0"
console = "0.16.2"
dialoguer = "0.12.0"
num-traits = "0.2.19"
rand = "0.9.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
